Remove unwanted spaces after \deleted words

--- a/intro.tex
+++ b/intro.tex
@@ -23,7 +23,7 @@
 	\centering
 \includegraphics[width=0.75\textwidth]{images/fusion_reactor}
 	\caption{Cut-Away of Tokamak Reactor} ~\\
-	\small The three main components of a magnetic fusion reactor are: the tokamak structure, the plasma fuel, and the spring-like solenoid at the center. Here, the directions of the magnetic field ($B_0$) and plasma current ($I_P$) variables are shown to be in the toroidal direction.
+	\small The three main components of a magnetic fusion reactor are: the tokamak structure, the plasma fuel, and the coiled solenoid at the center. Here, the directions of the magnetic field ($B_0$) and plasma current ($I_P$) variables are shown to be in the toroidal direction.
 	\label{fig:fusion_reactor}
 \end{figure}
 
@@ -31,7 +31,7 @@
 
 \added{As can be seen by comparing the European and American/Asian fusion reactor design efforts, though, one of the most important decisions is whether to run the reactor as pulsed (EU\cite{eupulsed,eupulsed_2}) or steady-state (US\cite{ussteady} and Korea\cite{kstar}). The distinction between the two mainly manifests itself in the choice of auxiliary current drive:  inductive  for pulsed and lower hybrid for steady-state.\cite{jeff} With the model built for this thesis, it is possible to perform a direct comparison of these two modes of operations. }
 
-\added{Due to the speed and simplicity of the model, hundreds of reactors can be simulated in minutes. Further, the model has been benchmarked against other ones from the literature\cite{ussteady,arc,process,inputfile}, allowing it to answer several critical questions regarding the comparison of the two modes of operation. A major finding of this is that HTS tape should appear in different places for the two modes of operation: within the central solenoid for pulsed machines and inside the TF coil magnets for steady-state ones. A more basic finding is that pulsed can be competitive and the US should investigate it further. }
+\added{Due to the speed and simplicity of the model, hundreds of reactors can be simulated in minutes. Further, the model has been benchmarked against other ones from the literature\cite{ussteady,arc,process,inputfile}, allowing it to answer several critical questions regarding the comparison of the two modes of operation. A major finding of this is that HTS tape should appear in different places for the two modes of operation: within the central solenoid for pulsed machines and inside the TF coils for steady-state ones. A more apparent finding is that pulsed can be competitive and the US should investigate it further. } 
 
 \deleted{The central goal of fusion energy research is to build a profitable nuclear reactor. It has long been joked though that fusion power will always be 20-50 years away. This paper lays a framework for exploring reactor space for functional, efficient designs -- based on world experiments during the last half-century. Due to the speed and simplicity of the model, hundreds of reactors can be explored in minutes (outpacing the domestic program slightly).}
 
@@ -41,7 +41,7 @@
 
 \added{The leading candidate for the first economic, power-producing fusion reactor is a tokamak. As shown in \cref{fig:fusion_reactor}, tokamaks are doughnut-shaped metal structures that use magnets to confine their fusion-grade plasmas. The challenge in building such a device comes from the various physics and engineering constraints it must satisfy -- i.e. not surpassing acceptable levels of neutron damage, plasma pressure, etc.}
 
-\added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed,eupulsed_2}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involves with the two modes of operation are then: cyclical stresses for pulsed and expensive current drive for steady state.\cite{jeff}}
+\added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed,eupulsed_2}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involved with the two modes of operation are then: cyclical stresses for pulsed devices and expensive current drive for steady state ones.\cite{jeff}}
 
 \deleted{When people talk about fusion, they usually talk about plasma physics, and when people talk about plasma physics, they often talk about things like: the sun, lightning, and the aurora borealis. Of these three, the sun is the only nuclear reactor. However, the sun can stay on all day because the massive gravity of its fuel source helps keep it self-contained in space. On Earth, this is not possible -- the plasma fuel needs to be contained by other means (i.e.\ with magnets).}
 
@@ -63,7 +63,7 @@
 	\label{fig:pulses}
 \end{figure}
 
-\replaced{The main way these}{These} two modes of operation, \emph{pulsed} and \emph{steady-state}, \deleted{greatly} influence \replaced{reactor design, though, is}{the design} through the current balance equation (derived later). What this means practically is \replaced{a tokamak plasma requires some current to stay in equilibrium}{tokamaks need current to spin their plasma hoops at some required speed} and this current has to \replaced{be partially generated by auxiliary systems: inductively for pulsed and non-inductively for steady-state.}{come from somewhere. Luckily, the plasma naturally enjoys spinning and provides some assistance through the bootstrap current. The remaining current must then be produced by external means.} \added{To fairly compare the two modes of operation thus requires a generalized handling of current balance that can incorporate both auxiliary systems. }
+\replaced{The main way these}{These} two modes of operation, \emph{pulsed} and \emph{steady-state}, \deleted{greatly}influence \replaced{reactor design, however, is}{the design} through the current balance equation (derived later). What this means practically is \replaced{a tokamak plasma requires some current to stay in equilibrium}{tokamaks need current to spin their plasma hoops at some required speed} and this current has to \replaced{be partially generated by auxiliary systems: inductively for pulsed and non-inductively for steady-state.}{come from somewhere. Luckily, the plasma naturally enjoys spinning and provides some assistance through the bootstrap current. The remaining current must then be produced by external means.} \added{To fairly compare the two modes of operation thus requires a generalized handling of current balance that can incorporate both sets of auxiliary systems. } 
 
 \deleted{The source of external current drive is what distinguishes pulsed from steady-state devices. Steady-state devices provide the required current assistance either through lasers or particle beams -- this paper's model focusing on a type of laser assistance called lower-hybrid current drive (LHCD). \cite{jeff} Pulsed machines, on the other hand, rely on inductive sources -- which by definition require cycles of charging and discharging several times a day.}
 
@@ -108,7 +108,7 @@
 
 \section{Pricing a Fusion Reactor}
 
-To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{reactors} the obvious metrics are costs. ITER -- the \deleted{second} most expensive experiment \replaced{in the world\cite{nyt,bloomberg}}{today (only behind the LHC)} -- has a history \replaced{full of}{rich in} countries backing out for high \replaced{construction costs}{price tags} and rejoining only \replaced{after}{when} they finally get lowered.\cite{jeff} The problem is \$20B is a lot of money and 20 years is a long time. Moreover, approximating true costs \replaced{is difficult due to the}{becomes even trickier when designers} need to project (or neglect)  economies-of-scale for expensive components, such as the \added{superconducting} magnets and irradiated materials.
+To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{reactors} the obvious metrics are costs. ITER -- the \deleted{second}most expensive experiment \replaced{in the world\cite{nyt,bloomberg}}{today (only behind the LHC)} -- has a history \replaced{full of}{rich in} countries backing out for high \replaced{construction costs}{price tags} and rejoining only \replaced{after}{when} they finally get lowered.\cite{jeff} The problem is \$20B is a lot of money and 20 years is a long time. Moreover, approximating true costs \replaced{of the experiment is made difficult due to the}{becomes even trickier when designers} need to project (or neglect)  economies-of-scale for expensive components, such as the \added{superconducting} magnets and irradiated materials.
 
 \replaced{Therefore,}{As such,} this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, \replaced{both in:}{for both:} \replaced{formulating the relations and}{modeling reasons as well as} conveying the two metrics to physicists. \replaced{The approximation for the}{To begin, the relevant approximation for} capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
 \begin{equation}
@@ -118,13 +118,13 @@ To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{re
 	}
 \end{equation}
 \myequations{Magnetic Energy -- $W_M$}
-In this magnetic energy proportion relation, the tokamak's major radius -- R -- is involved in a volumetric term ($R^3$) and B is the strength (in Teslas) of the \replaced{toroidal magnetic field.}{hooped shape magnetic field that lays nested within the plasma's shell (near its core).} This quantity simply states that the two surefire ways to make a machine more expensive \replaced{are to build it bigger and to use stronger magnets.}{to build are: making it larger and using stronger magnets.} \added{As these terms also improve confinement, this cost introduces a trade-off between size and magnet technology. This is why the proposed ARC reactor -- designed with HTS tape -- could be half the size of ITER, which uses conventional LTS technology.}
+In this magnetic energy proportion relation, the tokamak's major radius -- R -- is involved in a volumetric term ($R^3$) and B is the strength (in Teslas) of the \replaced{toroidal magnetic field.}{hooped shape magnetic field that lays nested within the plasma's shell (near its core).} This quantity simply states that the two surefire ways to make a machine more expensive \replaced{are to build it bigger and to use stronger magnets.}{to build are: making it larger and using stronger magnets.} \added{As these terms also improve confinement, this cost introduces a trade-off between size and magnet technology. This is why the proposed ARC reactor -- designed with HTS tape -- could be half the size of ITER, which uses conventional LTS technology.\cite{arc,jeff} }
 
-The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e.\ the magnetic energy) by the main source of power output. \added{For a tokamak, this source of power is fusion -- discussed in more detail in \cref{chapter:power}.} \added{The cost-per-watt thus measures how economically competitive a reactor will be once it is build. This is how to compare the rate of return for different base-load power sources (e.g. fission, coal, and solar).} \deleted{This quantity measures how profitable a reactor will be once it is built. In a tokamak, the main power output is assumed to be fusion power, which relies on light elements (i.e.\ two Hydrogens) fusing into a heavier one (i.e.\ one Helium) -- hopefully releasing enough energy to offset the expense of causing it to happen in the first place. Although fusion power will not be defined till later, it does highlight the fact that this measure of cost-per-watt actually has units of time!}
+The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e.\ the magnetic energy) by the main source of power output. \added{For tokamaks, this source of power is fusion -- discussed in more detail in \cref{chapter:power}.} \added{The cost-per-watt thus measures how economically competitive a reactor will be once it is build. This is how to compare the rate of return for different base-load power sources (e.g. fission, coal, and solar).} \deleted{This quantity measures how profitable a reactor will be once it is built. In a tokamak, the main power output is assumed to be fusion power, which relies on light elements (i.e.\ two Hydrogens) fusing into a heavier one (i.e.\ one Helium) -- hopefully releasing enough energy to offset the expense of causing it to happen in the first place. Although fusion power will not be defined till later, it does highlight the fact that this measure of cost-per-watt actually has units of time!}
 \begin{equation}
 	\tilde C_W = \frac{W_M}{P_F}
 \end{equation}
-\added{A final correction can be made on the cost-per-watt to account for reactor downtime, which is fundamental to pulsed operation. This is handled through the duty factor ($f_{duty}$) that is defined as the ratio of a reactor's quasi-steady-state flattop duration to the entire pulse length of a tokamak. In the context of the cost-per-watt, it scales down the fusion power:}
+\added{A final correction can be made on the cost-per-watt to account for reactor downtime, which is fundamental to pulsed operation. This is handled through the duty factor ($f_{duty}$) that is defined as the ratio of a reactor's quasi-steady-state flattop duration to the entire pulse length of a tokamak -- as shown in \cref{fig:pulses}. In the context of the cost-per-watt, it scales down the fusion power:}
 %\footnote{As energy per unit watt has units of time (i.e seconds).
 \deleted{The final piece of the costing puzzle is a duty factor that levelizes the comparison of pulsed and steady-state tokamaks. As pulsed machines may be off 20\% of the time, their fusion power output should be reduced by that percentage. This is accounted for in the duty factor, which is simply the ratio of the flattop -- the time when pulsed machines are approximately held at steady-state -- to the entire length of the pulse.}
 \deleted{In pulsed machines, the entire pulse includes charging the inductive sources as well as flushing out the tokamak between runs. These non-flattop portions of time can last around thirty minutes (where the reactor makes no money). As steady-state machines lack these non-flattop portions, their duty factors are rightfully one. Analysis in Fig.\ \ref{section:pulse} and discussion with several researchers, however, show that the same will probably hold true for a pulsed reactor, too.}
@@ -148,7 +148,7 @@ Before reactors can be \replaced{priced}{costed}, though, they have to be modele
 
 \added{Stepping back, a fusion systems model is an approach to designing reactors based on satisfying various physics and engineering constraints. There are many of these models in the field.\cite{hartmann,process,arc,minervini,helios,sycomore,fresco,aries,plasmod} Zero-dimensional (0-D) systems models are then a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of this is that hundreds of reactors can be simulated in minutes.}
 
-\added{Within the context of reactor design, these 0-D systems models serve an important role due to their speed and simplicity. Although not truly self-consistent,}\footnote{For speed concerns, 0-D fusion systems models often ignore self consistency in quantities like pressure profiles and use empirical fits to estimate values such as the confinement time.} \added{these models are capable of exploring large areas of reactor space. This is especially important in the early stages of tokamak planning when researchers are selecting a design point. These models also have use in finding general costing trends -- as shown in this document.}
+\added{Within the context of reactor design, these 0-D systems models serve an important role due to their speed and simplicity. Although not truly self-consistent,}\footnote{For speed concerns, 0-D fusion systems models often ignore self consistency in quantities like pressure profiles and use empirical fits to estimate values such as the confinement time.} \added{these models are capable of exploring large areas of reactor space. This is especially important in the early stages of tokamak planning when researchers are selecting a design point. These models also have use when searching for general costing trends -- as shown in this document.}
 
 What makes this paper's \added{systems} model different from \replaced{other ones, though,}{others in the field} is \replaced{its}{the} generalized handling of both modes of tokamak operation: pulsed and steady-state. This was necessitated by a desire to \added{fairly} compare the \replaced{two.}{two modes on a level playing field.} \replaced{The most fundamental result of this analysis is that both modes are actually capable of leading to economically competitive reactors}{What this shows is that both pulsed and steady-state tokamaks could make for profitable fusion reactors} -- assuming some technological advancements.
 
@@ -158,13 +158,15 @@ What makes this paper's \added{systems} model different from \replaced{other one
 
 \deleted{One technological advancement that could lead to major wins is improving magnet components. This is why MIT has championed high-field designs for the better part of the last century. In their latest effort, the PSFC team has explored new high-temperature superconducting (HTS) tape capable of doubling the maximum achievable field strength. What this paper shows is that this logic is indeed correct and that HTS tape is all that is needed to build optimum reactors.}
 
-More concretely, this paper shows that new HTS \deleted{tape} technology is capable of lowering \replaced{reactor costs -- both for pulsed and steady-state operation.}{both pulsed and steady-state tokamak costs.} \replaced{Further, this HTS tape has different uses within the two modes of operation -- as set by cost concerns (see \cref{fig:charybdis_intro,fig:proteus_intro}). This analysis shows that HTS should be employed in the TF coils for steady-state reactors \emph{and} in the central solenoid for pulsed ones. This is because pulsed machines require lower toroidal field strengths, which are achievable with less expensive LTS magnets.}{Further, the benefits of doubling the magnet strength bring the situation to a realm of significantly diminished rates of return. HTS is thus the end goal for the conventional D-T fusion paradigm.}
+More concretely, this paper shows that new HTS \deleted{tape}technology is capable of lowering \replaced{reactor costs -- both for pulsed and steady-state operation.}{both pulsed and steady-state tokamak costs.} \replaced{Further, this HTS tape has different uses within the two modes of operation -- as set by cost concerns (see \cref{fig:charybdis_intro,fig:proteus_intro}). This analysis shows that HTS should be employed in the TF coils for steady-state reactors \emph{and} in the central solenoid for pulsed ones. This is because pulsed machines require lower toroidal field strengths, which are achievable with less expensive LTS (low-temperature superconducting) magnets.}{Further, the benefits of doubling the magnet strength bring the situation to a realm of significantly diminished rates of return. HTS is thus the end goal for the conventional D-T fusion paradigm.}
 
 \deleted{Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e.\ the TF coils). Whereas pulsed devices would benefit from employing HTS in the central solenoid -- that produces most of a reactor's inductive current. A corollary of this is the more conventional low-temperature superconducting (LTS) magnets (i.e.\ less expensive ones) can be used for pulsed TF coils, as their improved confinement levels off at much lower field strengths.}
 
 Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple \replaced{detours}{segues} will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fussy.jl -- is the topic of \cref{chapter:fussy} and is freely available at:
 
-{\centering \href{http://git.io/tokamak}{git.io/tokamak} \par } ~
+{\centering \href{http://git.io/tokamak}{git.io/tokamak} \par }
+
+\vfill
 
 \begin{figure*}[h]
     \centering
@@ -191,6 +193,8 @@ Now that the problem has been thoroughly introduced, we will go over the theory 
     \small{\added{Steady-state reactors benefit from increased toroidal field strength until neutron wall loading starts to dominate design (at around 10-15 T for Charybdis). This is well within the range accessible to HTS magnets.}}
     \label{fig:charybdis_intro}
 \end{figure*}
+
+\vfill
 
 \begin{figure*}[h]
     \centering
