--- a/steady.tex
+++ b/steady.tex
@@ -24,12 +24,12 @@ This chapter explores a simple model for designing steady-state tokamaks. In the
 Along the way, equations will be derived that get rather complicated. To remedy the situation, a distinction between \replaced{dynamic}{floating} and \replaced{static}{fixed} values is now given, which will allow splitting most equations into \replaced{static}{fixed} and \replaced{dynamic}{floating} parts. \replaced{Dynamic}{Fixed} values -- i.e.\ the tokamak's major radius ($R_0$) and magnet strength ($B_0$), as well as the plasma's current ($I_P$), temperature ($\overline T$), and density ($\overline n$) -- are first-class variables in the model \added{(see \cref{table:dynamic})}. Everything is derived to relate them. \replaced{Static}{Fixed} values, on the other hand, can be treated as code inputs, which remain constant throughout a reactor solve.  These most obviously include the various geometric and profile parameters introduced next section.
 
 \added{
-The overall structure of this chapter, then, is built around developing an equation for plasma current in a steady-state tokamak. It is shown that this value arises from balancing current in a reactor using both a plasma's own bootstrap current ($I_{BS}$), as well the tokamak's auxiliary driven current ($I_{CD}$). These relations necessitate geometric parameters and plasma profiles, which will be given shortly. Along the way, definitions will also be needed for the Greenwald density ($N_G$) and the fusion power ($P_F$). What is shown is that the current does not actually depend directly on the major radius ($R_0$) or magnet strength ($B_0$) of a tokamak -- allowing these variables to be put off until next chapter.
+The overall structure of this chapter, then, is built around developing an equation for plasma current in a steady-state tokamak. It is shown that this value arises from balancing current in a reactor using both a plasma's own bootstrap current ($I_{BS}$), as well the tokamak's auxiliary driven current ($I_{CD}$). These relations necessitate geometric parameters and plasma profiles, which will be given shortly. Along the way, definitions will also be needed for the Greenwald density ($N_G$) and the fusion power ($P_F$). What is shown by this is that the current does not actually depend directly on the major radius ($R_0$) or magnet strength ($B_0$) of a tokamak -- allowing these variables to be put off until next chapter.
 }
 
 \section{Defining Plasma Parameters}
 
-As mentioned previously, the zero-dimensional model derived here can closely approximate solutions from higher-dimensional codes that might take \replaced{many hours}{weeks} to run. The essence of boiling down three-dimensional behaviors to one dimensional profiles -- and zero-dimensional averaged values -- begins with defining the most important plasma parameters. These are the: current \added{density} (J), temperature (T), and density (n) of a plasma.
+As mentioned previously, the zero-dimensional model derived here can closely approximate solutions from higher-dimensional codes that might take \replaced{many hours}{weeks} to run. The essence of reducing three-dimensional behaviors to one dimensional profiles -- and zero-dimensional averaged values -- begins with defining the most important plasma parameters. These are the: current \added{density} (J), temperature (T), and density (n) of a plasma.
 
 Solving this problem most generally usually involves decoupling the geometry of the plasma from the shaping of its nearly parabolic radial-profiles -- both of which will be explained shortly.
 
@@ -59,7 +59,7 @@ The first thing people see when they look at a tokamak is its geometry \added{--
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\
     \caption{Geometry of a Tokamak} ~ \\
-    \small{This diagram is of a tokamak's toroidal (top) view and the poloidal cross section of a slice across the major axis. Included are the four components of a reactor: the plasma, it's metallic blanket, the toroidal field magnets surrounding them, and the central solenoid. These have thicknesses of a, b, c and d, respectively. $R_{CS}$ is where the solenoid starts.}
+    \small{This diagram is of a tokamak's toroidal (top) view and the poloidal cross section of a slice across its major axis. Included are the four components of a reactor: the plasma, it's metallic blanket, the toroidal field magnets surrounding them, and the central solenoid. These have thicknesses of a, b, c and d, respectively. $R_{CS}$ is where the solenoid starts.}
     \label{fig:views}
 \end{figure*}
 
@@ -71,9 +71,9 @@ These questions lend themselves to the three important geometric variables -- th
 	}
 \end{equation}
 \myequations{Minor Radius -- $a$}
-This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\varepsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.}
+This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\varepsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across a machine's major radius.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.}
 
-The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related to the shape of the torn halves. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is shown in \cref{chapter:flux}. }
+The two remaining geometric parameters -- $\kappa$ and $\delta$ -- are then related to the shape of the poloidal cross-sections. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is explained in \cref{chapter:flux}. }
 
 \begin{figure*}[h]
     \centering
@@ -105,15 +105,15 @@ The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related t
         \caption{$\varepsilon$}
     \end{subfigure} ~\\ ~\\
     \caption{Geometric Parameters} ~\\
-    \small These three geometric parameters allow the toroidal cross-sections to scale radially, stretch vertically, and become more triangular -- thus improving upon simple circular slices.
+    \small These three geometric parameters allow the toroidal cross-sections to scale radially ($\varepsilon$), stretch vertically ($\kappa$), and become more triangular ($\delta$).
     \label{fig:geometry}
 \end{figure*}
 
-These geometric factors allow the volumetric and surface integrals governing fusion power and bootstrap current to be condensed to simple radial ones -- see \cref{eq:qs,eq:qv}. The only remaining step is to define the radial profiles for: the density, temperature, and current density of a plasma.
+These geometric factors also allow the volumetric and surface integrals governing fusion power and bootstrap current to be condensed to simple radial ones -- see \cref{eq:qs,eq:qv}. The only remaining step is to define the radial profiles for: the density (n), temperature (T), and current density (J) of a plasma.
 
 \subsection{Prescribing Plasma Profiles}
 
-The first step in defining radial profiles is realizing that all three quantities are \replaced{essentially parabolas}{basically parabolas} -- i.e.\ the temperature, density and current \added{density}, shown in \cref{fig:profiles}, are peaked at some radius (usually the center) and then decay to zero somewhere before the walls of the tokamak enclosure.
+The first step in defining radial profiles is realizing that all three quantities are \replaced{essentially parabolic}{basically parabolas} -- i.e.\ the temperature, density and current \added{density}, shown in \cref{fig:profiles}, are peaked at some radius (usually the center) and then decay to zero somewhere before the walls of the tokamak enclosure.
 
 \added{Although not self-consistent, these profiles do capture enough of the physics to approximate relevant phenomenon, such as transport and fusion power.\cite{process_guide}}
 
@@ -145,12 +145,12 @@ The first step in defining radial profiles is realizing that all three quantitie
 
 \subsubsection{The Density Profile}
 
-To begin, density has the simplest profile. This is because it is relatively flat, remaining near the average value -- $\overline n$ -- throughout the body of the plasma until quickly decaying to zero near the edge of the plasma.\footnote{Even in H-Mode plasmas where density profiles have a pedestal,\cite{density} they usually have much less of a peak than temperatures\cite{temperature} -- especially so in a reactor setting.\cite{pedestals}} For this reason, a parabolic profile with a very low peaking factor -- $\nu_n$ -- is well suited.
+To begin, density has the simplest profile. This is because it is relatively flat, remaining near the average value -- $\overline n$ -- throughout the body of the plasma until quickly decaying to zero near the edge of the plasma.\footnote{Even in H-Mode plasmas where density profiles have a pedestal,\cite{density} they usually have much less of a peak than temperatures\cite{temperature} -- especially in a reactor setting.\cite{pedestals}} For this reason, a parabolic profile with a very low peaking factor -- $\nu_n$ -- is well suited.
 \begin{equation}
 	n(\rho) = \overline n \cdot ( 1 + \nu_n ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_n}
 \end{equation}
 \myequations{Density Profile -- $n$}
-\added{Here, $\rho$ is a normalized radial-like flux label, with $\rho = 0$ at the magnetic axis and $\rho = 1$ at the outer plasma surface (i.e.\ the 95\% surface). While $\overline n$ is referred to as the volume-averaged density because using the volume  integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):}
+\added{Here, $\rho$ is a normalized radial-like flux label, with $\rho = 0$ occurring at the magnetic axis and $\rho = 1$ being at the outer plasma surface (i.e.\ the 95\% surface). The variable $\overline n$ is then referred to as the volume-averaged density because using the volume  integral -- given by \cref{eq:qv} -- over the density profile results in that value, after dividing through by the volume ($\volume$):}
 \begin{equation}
 	\overline n = \frac{ \int n(\vec{\bold{r}}) \, d\vec{\bold{r}}  }{\volume}
 \end{equation}
@@ -198,7 +198,7 @@ The goal is then to write equations for bootstrap current and driven current. Th
 
 \subsection{Enforcing the Greenwald Density Limit}
 
-The Greenwald density limit is \replaced{a density limit that applies to all tokamaks}{ubiquitous in the field of fusion energy.} It sets a hard limit on the density and how it scales with current and reactor size. Although currently lacking a true first-principles theoretical explanation, it does have a real meaning within the design context. Operate at too low a density and run the risk of never entering H-Mode. Run the density too high, and cause the tokamak's plasma to \replaced{disrupt.}{disrupt catastrophically!} \added{\cref{fig:greenwald} shows how most shots exist within the regime between the two.}
+The Greenwald density limit is \replaced{a density limit that applies to all tokamaks.}{ubiquitous in the field of fusion energy.} It sets a hard limit on the density and how it scales with current and reactor size. Although currently lacking a true first-principles theoretical explanation, it does have a real meaning within the design context. Operate at too low a density and run the risk of never entering H-Mode. Run the density too high, and cause the tokamak's plasma to \replaced{disrupt.}{disrupt catastrophically!} \added{To this, \cref{fig:greenwald} shows that most shots exist in the regime between the two extremes.}
 
 \begin{figure*}
     \centering
@@ -267,7 +267,7 @@ The next step is transforming the \emph{line-averaged} density ($\hat n$) into t
  	\hat n = \frac{\sqrt{\pi}}{2} \cdot \left( \frac{\Gamma \left( \nu_n + 2 \right)}{\Gamma \left( \nu_n + \frac{3}{2} \right)} \right) \cdot \overline n
  \end{equation}
 
- Where $\Gamma( \, \cdots)$ represents the gamma function: the non-integer analogue of the factorial function.
+ Here, $\Gamma( \, \cdots)$ represents the gamma function: the non-integer analogue of the factorial function.
 
  Combining these pieces allows the volume-averaged density to be written in standardized units \deleted{(i.e.\ the ones we use)}as:
 \begin{equation}
@@ -321,7 +321,7 @@ Here, g is a geometric factor (of order 1) given by \cref{eq:gg}. While the seco
 
 \deleted{For a more formal look into this $J_{BS}$ function, check the appendix section on pedestal temperatures. The point to make now is that it depends on the the profiles' derivatives, leading to one major discrepancy in the model.}
 
-As shown later in the results, bootstrap fractions are often under-predicted by this model. This is due to parabolic profiles (i.e.\ for temperature) having much less steep declines near the edge (i.e.\ in their derivatives) than characteristic H-Mode profiles with pedestals. This implies that the area most positively impacted by a pedestal profile for temperature would be the bootstrap current derivation. \added{The instructions to do so are given in \cref{section:pedestalbootstrap}. }
+As shown later in the results, bootstrap fractions are often under-predicted by this model. This is due to parabolic profiles (i.e.\ for the temperature) having much less steep declines near the edge (i.e.\ in their derivatives) than characteristic H-Mode profiles with pedestals. This implies that the area most positively impacted by a pedestal profile for temperature would be the bootstrap current derivation. \added{The instructions to do so are given in \cref{section:pedestalbootstrap}. }
 
 \deleted{Getting back on track -- and without completeness -- the bootstrap current can now be written in proportionality form as:}
 
@@ -398,13 +398,13 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 \deleted{The final point to make before returning to the fusion power derivation is the main difference between the two fusion products: helium (i.e.\ the alpha particle) and the neutron. First, neutrons lack a charge -- they are neutral. This means they cannot be confined with magnetic fields. As such, they simply move in straight lines until they collide with other particles. As the structure of a tokamak is mainly metal, the neutron is much more likely to collide there than the gaseous plasma, which is orders of magnitude less dense. Conversely, alpha particles are charged -- when stripped of their electrons -- and can therefore be kept within the plasma using magnets. What this means practically is that of the 17.6 MeV that comes from every fusion reaction, only 3.5 MeV remains inside the plasma (within the helium particle species).}
 
  \added{The next segue on our journey to solving for the steady current is deriving the fusion power ($P_F$), which appears in current drive. A comprehensive introduction to this is given in \cref{chapter:power}.} \replaced{Summarized, though, a formula for}{Returning to the problem at hand, the} fusion power from a D-T reaction -- in megawatts -- is given by \replaced{the following volume integral: \cite{lawson} }{ Jeff Freidberg's textbook through the following volume integral: }
- \begin{equation}
+ \begin{gather}
  	\label{eq:pf_int}
- 	P_F = \int E_F \, n_D \, n_T \, \langle \sigma v \rangle \, d \vec{\bold{r}}
- \end{equation}
-\begin{equation}
+ 	P_F = \int E_F \, n_D \, n_T \, \langle \sigma v \rangle \, d \vec{\bold{r}} \\
+	\tcboxmath{
 	E_F = 17.6 \ \textnormal{MeV}
-\end{equation}
+	}
+\end{gather}
 \added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
 \begin{equation}
 	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
@@ -412,14 +412,14 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 \myequations{Dilution Factor -- $f_{D}$}
  The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in \cref{chapter:power}). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
 
- The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume analogue of the previously given surface-area integral is:
+ The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume integral for this model's geometry is given by:
  \begin{equation}
   	\tag{\ref{eq:qv}}
  	Q_V = 4 \pi^2 R_0 a^2 \kappa g \int_0^1 Q(\rho) \rho \, d\rho
  \end{equation}
  Where Q is an arbitrary function of $\rho$ and g is a geometric factor approximately equal to one -- both described in \cref{chapter:flux}. The fusion power can now be rewritten as:
  \begin{equation}
- 	P_F = \pi^2 E_F f_D^2 R_0 a^2 \kappa g \int_0^1 n^2 \langle \sigma v \rangle \rho \, d\rho
+ 	P_F = g \kappa  E_F R_0 \left( \pi a f_D \right) ^2 \int_0^1 n^2 \langle \sigma v \rangle \rho \, d\rho
  \end{equation}
 In standardized units, this becomes:
 \begin{equation}
@@ -454,32 +454,30 @@ As may have been lost along the way, \replaced{this chapter's}{the current} miss
 		\tag{\ref{eq:ibal}}
 		I_P = I_{BS} + I_{CD}
 \end{equation}
-In standardized units, the equation for current drive is often given in the literature as: \cite{itercd}
+In standardized units, current drive is often formulated in the literature as: \cite{itercd}
 \begin{equation}
 	I_{CD} = \eta_{CD} \cdot \left( \frac{P_H}{\overline n R_0} \right)
 \end{equation}
 Here, $\eta_{CD}$ is the current drive efficiency with units $ \left(
-\frac{ \textnormal{MA} }{ \textnormal{MW-m}^2 } \right) $ and $P_H$ is the heating power in megawatts driven by LHCD (and absorbed by the plasma).\footnote{A more formal introduction to LHCD, as well as the reasoning behind selecting it over neutral beam (NBCD) and electron cyclotron current drive (ECCD), are given in \cref{chapter:lhcd}. }
+\frac{ \textnormal{MA} }{ \textnormal{MW-m}^2 } \right) $ and $P_H$ is the heating power -- in megawatts -- driven by LHCD (and absorbed by the plasma).\footnote{A more formal introduction to LHCD, as well as the reasoning behind selecting it over neutral beam (NBCD) and electron cyclotron current drive (ECCD), are given in \cref{chapter:lhcd}. }
 
 Let it be known, though, that driving current in a plasma is hard! In fact, pulsed reactor designers (i.e.\ European fusion researchers) think it is so difficult, they may choose to forego it completely -- focusing only on inductive sources that necessitate reactor fatigue and downtime.
 
 For LHCD, a common current drive efficiency ($\eta_{CD}$) seen in many designs is $0.3 \pm 0.1 $ in the standard units.\cite{itercd,arc,ussteady} It is however inherently a function of all the plasma parameters -- with subtlety put off until the discussion of self-consistency. For now it assumed to have some constant/\replaced{static}{fixed} value.
 
-The remaining step in deriving an equation for driven current ($I_{CD}$) is a formula for the heating power ($P_H$). The way fusion systems models -- like this one -- handle the heating power is through the physics gain factor, Q. Sometimes referred to as big Q, this value represents how many times over the heating power ($P_H$) is amplified as it is transformed into fusion power ($P_F$):
+The remaining step in deriving an equation for driven current ($I_{CD}$), then, is finding a formula for the heating power ($P_H$). The way fusion systems models -- like this one -- handle the heating power is through the physics gain factor, Q. Sometimes referred to as big Q, this value represents how many times over the heating power ($P_H$) is amplified as it is transformed into fusion power ($P_F$):
 \begin{equation}
 	\label{eq:ph}
 	P_H = \frac{P_F}{Q}
 \end{equation}
 \myequations{Heating Power -- $P_H$}
 Now, utilizing the previously defined Greenwald density and fusion power:
- \begin{equation}
+ \begin{gather}
  	\tag{\ref{eq:greenwald}}
- 	\overline n = K_n \cdot \left( \frac{I_P}{R_0^2} \right)
- \end{equation}
- \begin{equation}
+ 	\overline n = K_n \cdot \left( \frac{I_P}{R_0^2} \right) \\
 	\tag{\ref{eq:pf}}
 	P_F = K_F \cdot \overline{n}^2 \cdot R_0^3  \cdot (\sigma v)
-\end{equation}
+\end{gather}
 The current from LHCD can be written as:
 \begin{equation}
 	\label{eq:icd}
@@ -491,7 +489,7 @@ The current from LHCD can be written as:
 \begin{equation}
 	K_{CD} = \left( K_F K_n \right) \cdot \frac{\eta_{CD}}{Q}
 \end{equation}
-As $\eta_{CD}$ and Q appear within a \replaced{static}{fixed} coefficient, it is implied that both remain constant throughout a solve. This subtlety is lifted when handling $\eta_{CD}$ self-consistently, which will be discussed shortly. However, even in that context, it proves beneficial to still think of $\eta_{CD}$ as a sequence of \replaced{static}{fixed} variables -- set by the model rather than the user.
+As $\eta_{CD}$ and Q appear within a \replaced{static}{fixed} coefficient, it is implied that both remain constant throughout a solve. This subtlety is lifted when handling $\eta_{CD}$ self-consistently, which will be discussed shortly. However, even in this context, it proves beneficial to think of $\eta_{CD}$ as a sequence of \replaced{static}{fixed} variables -- set by the model rather than the user.
 
 \subsection{Completing the Steady Current}
 
@@ -501,14 +499,12 @@ As $\eta_{CD}$ and Q appear within a \replaced{static}{fixed} coefficient, it is
 	I_P = I_{BS} + I_{CD}
 \end{equation}
 Two equations were then found for the bootstrap ($I_{BS}$) and driven ($I_{CD}$) current:
-\begin{equation}
+\begin{gather}
 	\tag{\ref{eq:ibs}}
-	I_{BS} = K_{BS} \cdot \overline T
-\end{equation}
-\begin{equation}
+	I_{BS} = K_{BS} \cdot \overline T \\
 	\tag{\ref{eq:icd}}
 	I_{CD} = K_{CD} \cdot I_P \cdot ( \sigma v )
-\end{equation}
+\end{gather}
 Combining these three equations and solving for the total plasma current ($I_P$) -- in mega-amps -- yields:
 \begin{equation}
 	\label{eq:steady}
@@ -520,7 +516,7 @@ Combining these three equations and solving for the total plasma current ($I_P$)
 
 This is the answer we have been seeking!
 
-As mentioned before, this simple formula appears to only depend on temperature!\footnote{ This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\varepsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
+As mentioned before, this simple formula appears to only depend on temperature!\footnote{This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\varepsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ \linebreak $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
 
 As has become a mantra, though, the subtlety of this behavior lies in the self-consistency of the current-drive efficiency -- $\eta_{CD}$.
 
@@ -530,7 +526,7 @@ Although a thorough description of the wave theory behind lower-hybrid current d
 
 The logic behind finding a self-consistent current-drive efficiency is starting at some plausible value (i.e.\ $\eta_{CD} = 0.3$), solving for the steady current -- i.e.\ $I_P = f(\overline T)$ -- and then somehow iteratively creeping towards a value deemed self-consistent. What this means is that in addition to the solver described in the last section, there needs to be a black-box function that solutions are \replaced{sent}{piped} through to get better guesses at $\eta_{CD}$. The black-box function we use is a variation of the Ehst-Karney model. \cite{ehstkarney} \added{A thorough description of this algorithm is given in \cref{chapter:lhcd}.}
 
-As mentioned, \added{though,} a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
+As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
 \begin{equation}
 	\tilde \eta_{CD} = f( R_0, B_0, \overline n, \overline T, I_P )
 \end{equation}
