Make some work in progress changes

--- a/extra.tex
+++ b/extra.tex
@@ -23,7 +23,7 @@
 
 This chapter gives a brief overview of the plots that come about from using this model on several reactor prototypes: Charybdis, Proteus, ARC, DEMO Pulsed, and the two ARIES ACT designs. The two types of results this information come in are: magnet strength scans and cost sensitivity studies.
 
-In the former, all static variables are kept constant and only the magnet strength is allowed to change. Whereas, the latter focuses on changing one static variable at a time and finding several magnet strengths that satisfy certain constraints -- e.g. the minimum capital cost or when the beta and kink limits are both just marginally satisfied. 
+In the former, all static variables are kept constant and only the magnet strength is allowed to change. Whereas, the latter focuses on changing one static variable at a time and finding several magnet strengths that satisfy certain constraints -- e.g.\ the minimum capital cost or when the beta and kink limits are both just marginally satisfied.
 
 You can recreate all the plots shown here at the following website. Note that this interactive plotting tool also allows you to view the Monte Carlo samplings, which produced the scatter plots used in this document.
 
