--- a/power.tex
+++ b/power.tex
@@ -75,7 +75,7 @@ This reactivity term (or volumetric fusion reaction rate) can then be approximat
 	\xi = \left(\frac{B_G^2}{4\theta}\right)^{1/3}
 \end{equation}
 
-For D-T (Deuterium-Tritium) fuel within a standard fusion temperature regime (i.e. $T \in [10, 20]$ keV), this can be simplified to:\cite{zach}
+For D-T (Deuterium-Tritium) fuel within a standard fusion temperature regime (i.e.\ $T \in [10, 20]$ keV), this can be simplified to:\cite{zach}
 \begin{equation}
 		\langle\sigma v\rangle_\mathrm{DT} = 1.1\times10^{-24} \cdot  \, T^2   \ \ \ [ \, \sfrac{ \textnormal{m}^3 }{ \textnormal{s} } \, ]
 \end{equation}
