--- a/main.tex
+++ b/main.tex
@@ -76,13 +76,18 @@
 
 \setlength{\jot}{2.25ex}
 
-%\includeonly{lhcd}
+\includeonly{pulsed,cover,contents}
 
 \interfootnotelinepenalty=10000
 
 \newcommand{\hiddensubsection}[1]{
     \stepcounter{subsection}
     \subsection*{\Alph{chapter}.\arabic{section}.\arabic{subsection}\hspace{1em}{#1}}
+}
+
+\newcommand{\hiddensection}[1]{
+    \stepcounter{section}
+    \section*{\Alph{chapter}.\arabic{section}\hspace{1em}{#1}}
 }
 
 \begin{document}
