--- a/power.tex
+++ b/power.tex
@@ -7,12 +7,10 @@ In a tokamak reactor, the main source of output power is fusion. Therefore, this
 \section{Theoretical Background}
 
 The natural place to start when introducing fusion energy is the binding energy per nucleon curve shown in \cref{fig:binding_energy}. As can be seen, this function reaches a maximum value around the element Iron (A=56). What this means at a basic level is: elements lighter than iron can \emph{fuse} into a heavier one (i.e.\ hydrogens into helium), whereas heavier elements can \emph{fission} into lighter ones (e.g.\ uranium into krypton and barium). This is what differentiates fission (uranium-fueled) reactors from fusion (hydrogen-fueled) ones. For fusion reactors, the most common reaction in a first-generation tokamak will be:
-\begin{equation}
-	{}^2H+ {}^3H \rightarrow {}^4 He + {}^1 n + E_F
-\end{equation}
-\begin{equation}
+\begin{gather}
+	{}^2H+ {}^3H \rightarrow {}^4 He + {}^1 n + E_F \\
 	E_F = 17.6 \ \textnormal{MeV}
-\end{equation}
+\end{gather}
 \myequations{Fusion Energy -- $E_F$}
 
 \begin{figure}
